# axum-rs

./: Cargo.toml  README.md
src/: main.rs
src/config/: db.rs
src/handlers/: root.rs  users.rs
src/models/: api_res.rs  mod.rs  user.rs
src/routes/: root.rs  users.rs
src/state/: app_state.rs
